# loot-of-lima-solver-web

./: .gitignore  .pre-commit-config.yaml  README.md  package-lock.json  package.json  serverless-compose.yml  web.code-workspace
.github/workflows/: semantic-pr.yml  serverless-deploy_staging.yml
backend/: .flake8  .gitignore  handler.py  package-lock.json  pyproject.toml  serverless.yml
