[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Lucas Lee <replicat@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
loot-of-lima-solver = {git = "https://github.com/replicat/loot-of-lima-solver", rev = "main"}

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
